# flamingo-inference

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  production.yaml
docs/: architecture.md
flamingo_inference/: __init__.py
flamingo_inference/audio/: __init__.py  processor.py
flamingo_inference/config/: __init__.py  engine_config.py  server_config.py
flamingo_inference/engine/: __init__.py  async_flamingo.py
flamingo_inference/entrypoints/: __init__.py  api_server.py
flamingo_inference/entrypoints/cli/: __init__.py  main.py  serve.py
flamingo_inference/entrypoints/openai/: __init__.py  protocol.py
flamingo_inference/entrypoints/ui/: index.html
flamingo_inference/executor/: __init__.py  abstract.py  multiproc_executor.py  uniproc_executor.py  worker.py
flamingo_inference/health/: __init__.py  checker.py
flamingo_inference/metrics/: __init__.py  prometheus.py
flamingo_inference/models/: __init__.py  flamingo_model.py
flamingo_inference/scheduler/: __init__.py  request_queue.py  scheduler.py
